// sass - make sure main-container accommodates overflow for when window is resized

--- a/webapp/sass/theme/shared.scss
+++ b/webapp/sass/theme/shared.scss
@@ -245,6 +245,7 @@ textarea {
 .main-container{
   background: $color-global-bg;
   position: relative;
+  overflow-y: auto;
   min-height:calc(100% - #{$header-height});
 }
 
